chage Base64 class from JAXB to JSE